retrieve_ENO_DEV1/objects/Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_ID_Backend__c</fullName>
        <externalId>true</externalId>
        <label>CRM ID Backend</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_ID__c</fullName>
        <formula>Text(CRM_ID_Backend__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complimentary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complimentary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Date_Time__c</fullName>
        <label>Event Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_Commission__c</fullName>
        <label>Inside Commission</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outside_fees__c</fullName>
        <label>Outside fees</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_method__c</fullName>
        <label>Payment method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Private_Property__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Row__c</fullName>
        <label>Row</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Date__c</fullName>
        <label>Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seat__c</fullName>
        <label>Seat</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller__c</fullName>
        <label>Seller</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Type__c</fullName>
        <label>Show Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <label>Show</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_ID_Backend__c</fullName>
        <externalId>true</externalId>
        <label>Ticket ID_Backend</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ticket_ID__c</fullName>
        <formula>Text( Ticket_ID_Backend__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ticket Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Number__c</fullName>
        <label>Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Show__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ticket No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>